fixed issue with large filenames that break the layout in file upload and file download dialogs.

--- a/src/app/modules/main/components/content/content.component.css
+++ b/src/app/modules/main/components/content/content.component.css
@@ -172,6 +172,7 @@ table{
 .fileDialog .content .item .fileName{
     align-self: center;
     justify-self: center;
+    width: 200px;
 }
 
 .fileDialog .content .item img{
